--- a/www/templates/blogs.html
+++ b/www/templates/blogs.html
@@ -1,10 +1,10 @@
-{% extend '__base__.html' %}
+{% extends '__base__.html' %}
 
 {% block title %}Blog{% endblock %}
 
 {% block content %}
 
-    <div class="uk-width-middle-3-4">
+    <div class="uk-width-medium-3-4">
         {% for blog in blogs %}
         <article class="uk-article">
             <h2><a href="/blog/{{ blog.id }}">{{ blog.name }}</a> </h2>
@@ -16,16 +16,17 @@
         {% endfor %}
     </div>
 
-    <div class="uk-width-middle-1-4">
+    <div class="uk-width-medium-1-4">
         <div class="uk-panel uk-panel-header">
             <h3 class="uk-panel-title">Recommendation</h3>
             <ul class="uk-list uk-list-line">
                 <li><i class="uk-icon-thumbs-o-up"></i> <a target="_blank" href="#">Programing</a></li>
                 <li><i class="uk-icon-thumbs-o-up"></i> <a target="_blank" href="#">Reading</a></li>
-                <li><i class="uk-icon-thumbs-o-up"></i> \
+                <li><i class="uk-icon-thumbs-o-up"></i> 
                     <a target="_blank" href="http://python3-cookbook.readthedocs.org/zh_CN/latest/">Python Cookbook</a>
                 </li>
-                <li><i class="uk-icon-thumbs-o-up"></i> <a target="_blank" href="#">GitHub</a></li>
+                <li><i class="uk-icon-thumbs-o-up"></i> 
+		    <a target="_blank" href="https://github.com">GitHub</a></li>
             </ul>
         </div>
     </div>
