--- a/www/templates/blogs.html
+++ b/www/templates/blogs.html
@@ -8,7 +8,7 @@
         {% for blog in blogs %}
         <article class="uk-article">
             <h2><a href="/blog/{{ blog.id }}">{{ blog.name }}</a> </h2>
-            <p class="uk-article-meta">Posted{{ blog.created_at|datetime }}</p>
+            <p class="uk-article-meta">Posted at {{ blog.created_at|datetime }}</p>
             <p>{{ blog.summary }}</p>
             <p><a href="/blog/{{ blog.id }}">Continue Reading <i class="uk-icon-angle-double-right"></i></a></p>
         </article>
