--- a/www/templates/sign_in.html
+++ b/www/templates/sign_in.html
@@ -16,7 +16,7 @@ $(function() {
         el: '#vm',
         data: {
             email: '',
-            passwd: ''
+            password: ''
         },
         methods: {
             submit: function(event) {
@@ -26,7 +26,7 @@ $(function() {
                     email = this.email.trim().toLowerCase(),
                     data = {
                         email: email,
-                        passwd: this.passwd==='' ? '' : CryptoJS.SHA1(email + ':' + this.passwd).toString()
+                        password: this.password==='' ? '' : CryptoJS.SHA1(email + ':' + this.password).toString()
                     };
                 $form.postJSON('/api/authenticate', data, function(err, result) {
                     if (! err) {
@@ -42,7 +42,7 @@ $(function() {
 <body class="uk-height-1-1">
     <div class="uk-vertical-align uk-text-center uk-height-1-1">
         <div class="uk-vertical-align-middle" style="width: 320px">
-            <p><a href="/" class="uk-icon-button"><i class="uk-icon-html5"></i></a> <a href="/">Awesome Python Webapp</a></p>
+            <p><a href="/" class="uk-icon-button"><i class="uk-icon-html5"></i></a> <a href="/"> p3bird web app</a></p>
             <form id="vm" v-on="submit: submit" class="uk-panel uk-panel-box uk-form">
                 <div class="uk-alert uk-alert-danger uk-hidden"></div>
                 <div class="uk-form-row">
@@ -54,7 +54,7 @@ $(function() {
                 <div class="uk-form-row">
                     <div class="uk-form-icon uk-width-1-1">
                         <i class="uk-icon-lock"></i>
-                        <input v-model="passwd" name="passwd" type="password" placeholder="Password" maxlength="50" class="uk-width-1-1 uk-form-large">
+                        <input v-model="password" name="password" type="password" placeholder="Password" maxlength="50" class="uk-width-1-1 uk-form-large">
                     </div>
                 </div>
                 <div class="uk-form-row">
