--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="/static/css/uikit.min.css">
     <link rel="stylesheet" href="/static/css/uikit.gradient.min.css">
     <script src="/static/js/jquery-1.12.2.min.js"></script>
+    <script src="/static/js/sha1.min.js"></script>
     <script src="/static/js/uikit.min.js"></script>
+    <script src="/static/js/sticky.min.js"></script>
+    <script src="/static/js/vue.min.js"></script>
+    <script src="/static/js/awesome.js"></script>
     {% block beforehead %}<!-- before head  -->{% endblock %}
 </head>
 <body>
@@ -26,7 +30,7 @@
                         <a href="#0"><i class="uk-icon-user"></i> {{ __user__.name }}</a>
                         <div class="uk-dropdown uk-dropdown-navbar">
                             <ul class="uk-nav uk-nav-navbar">
-                                <li><a href="/signout"><i class="uk-icon-sign-out"></i> sign out</a></li>
+                                <li><a href="/sign_out"><i class="uk-icon-sign-out"></i> sign out</a></li>
                             </ul>
                         </div>
                     </li>
