__base__ html update

--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -17,11 +17,11 @@
 <body>
     <nav class="uk-navbar uk-navbar-attched uk-margin-bottom" >
         <div class="uk-container uk-container-center">
-            <a herf="/" class="uk-navbar-brand">p3bird</a>
+            <a href="/" class="uk-navbar-brand">p3bird</a>
             <ul class="uk-navbar-nav">
                 <li data-url="blogs"><a href="/"><i class="uk-icon-home"></i> Blog</a></li>
                 <li><a target="_blank" href="#"><i class="uk-icon-book"></i> Manual</a></li>
-                <li><a target="_blank" href="#"><i class="uk-icon-code"></i> Source</a></li>
+                <li><a target="_blank" href="https://github.com/Yicheng-G/p3bird-web-app"><i class="uk-icon-code"></i> Source</a></li>
             </ul>
             <div class="uk-navbar-flip">
                 <ul class="uk-navbar-nav">
