--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -19,7 +19,7 @@
         <div class="uk-container uk-container-center">
             <a href="/" class="uk-navbar-brand">p3bird</a>
             <ul class="uk-navbar-nav">
-                <li data-url="blogs"><a href="/"><i class="uk-icon-home"></i> Blog</a></li>
+                <li data-url="blogs"><a href="/blogs"><i class="uk-icon-home"></i> Blog</a></li>
                 <li><a target="_blank" href="#"><i class="uk-icon-book"></i> Manual</a></li>
                 <li><a target="_blank" href="https://github.com/Yicheng-G/p3bird-web-app"><i class="uk-icon-code"></i> Source</a></li>
             </ul>
