--- a/www/templates/manage_blogs.html
+++ b/www/templates/manage_blogs.html
@@ -5,20 +5,20 @@
 {% block beforehead %}
 
 <script>
-function initVM(data) {
+function initVM(data_) {
     var vm = new Vue({
         el: '#vm',
         data: {
-            blog: data.blog,
-            page: data.page
+            blogs: data_.blogs,
+            page: data_.page
         },
         methods: {
             edit_blog: function (blog) {
-                location.assign('/manage/blog/edit?id=' + blog.id);
+                location.assign('/manage/blogs/edit?id=' + blog.id);
             },
             delete_blog: function (blog) {
                 if (confirm('Are you sure you want to permanently delete "' + blog.name + '"?')) {
-                    postJSON('/api/blog/' + blog.id + '/delete', function (err, r) {
+                    postJSON('/api/blogs/' + blog.id + '/delete', function (err, r) {
                         if (err) {
                             return alert(err.message || err.error || err);
                         }
@@ -31,7 +31,7 @@ function initVM(data) {
     $('#vm').show();
 }
 $(function() {
-    getJSON('/api/blog', {
+    getJSON('/api/blogs', {
         page: {{ page_index }}
     }, function (err, results) {
         if (err) {
@@ -50,22 +50,21 @@ $(function() {
     <div class="uk-width-1-1 uk-margin-bottom">
         <div class="uk-panel uk-panel-box">
             <ul class="uk-breadcrumb">
-                <li><a href="/manage/comments">Comment</a></li>
-                <li class="uk-active"><span>Blog</span></li>
-                <li><a href="/manage/users">User</a></li>
+                <li><a href="/manage/comments">Comments</a></li>
+                <li class="uk-active"><span>Blogs</span></li>
+                <li><a href="/manage/users">Users</a></li>
             </ul>
         </div>
     </div>
 
-    <div id="error" class="uk-width-1-1">
-    </div>
+    <div id="error" class="uk-width-1-1"></div>
 
     <div id="loading" class="uk-width-1-1 uk-text-center">
         <span><i class="uk-icon-spinner uk-icon-medium uk-icon-spin"></i> Loading...</span>
     </div>
 
     <div id="vm" class="uk-width-1-1">
-        <a href="/manage/blog/create" class="uk-button uk-button-primary"><i class="uk-icon-plus"></i> New Blog</a>
+        <a href="/manage/blogs/create" class="uk-button uk-button-primary"><i class="uk-icon-plus"></i> New Blog</a>
 
         <table class="uk-table uk-table-hover">
             <thead>
@@ -77,19 +76,19 @@ $(function() {
                 </tr>
             </thead>
             <tbody>
-                <tr v-repeat="this_blog: blog" >
+                <tr v-for="blog in blogs" >
                     <td>
-                        <a target="_blank" v-attr="href: '/blog/'+this_blog.id" v-text="this_blog.name"></a>
+                        <a target="_blank" :href="'/blogs/'+blog.id" v-text="blog.name"></a>
                     </td>
                     <td>
-                        <a target="_blank" v-attr="href: '/user/'+this_blog.user_id" v-text="this_blog.user_name"></a>
+                        <a target="_blank" :href="'/users/'+blog.user_id" v-text="blog.user_name"></a>
                     </td>
                     <td>
-                        <span v-text="this_blog.created_at.toDateTime()"></span>
+                        <span v-text="blog.created_at.toDateTime()"></span>
                     </td>
                     <td>
-                        <a href="#0" v-on:click="edit_blog(this_blog)"><i class="uk-icon-edit"></i>
-                        <a href="#0" v-on:click="delete_blog(this_blog)"><i class="uk-icon-trash-o"></i>
+                        <a href="#0" @click="edit_blog(blog)"><i class="uk-icon-edit"></i>
+                        <a href="#0" @click="delete_blog(blog)"><i class="uk-icon-trash-o"></i>
                     </td>
                 </tr>
             </tbody>
