--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -20,7 +20,6 @@ $(function () {
         },
         methods: {
             submit: function (event) {
-                event.preventDefault();
                 var $form = $('#vm');
                 if (! this.name.trim()) {
                     return $form.showFormError('Please enter a name');
@@ -58,7 +57,7 @@ $(function () {
 
     <div class="uk-width-2-3">
         <h1>Welcome to p3bird</h1>
-        <form id="vm" v-on="submit: submit" class="uk-form uk-form-stacked">
+        <form id="vm" v-on:submit.prevent="submit" class="uk-form uk-form-stacked">
             <div class="uk-alert uk-alert-danger uk-hidden"></div>
             <div class="uk-form-row">
                 <label class="uk-form-label">Name:</label>
