--- a/www/templates/sign_in.html
+++ b/www/templates/sign_in.html
@@ -20,7 +20,6 @@ $(function() {
         },
         methods: {
             submit: function(event) {
-                event.preventDefault();
                 var
                     $form = $('#vm'),
                     email = this.email.trim().toLowerCase(),
@@ -43,7 +42,7 @@ $(function() {
     <div class="uk-vertical-align uk-text-center uk-height-1-1">
         <div class="uk-vertical-align-middle" style="width: 320px">
             <p><a href="/" class="uk-icon-button"><i class="uk-icon-html5"></i></a> <a href="/"> p3bird web app</a></p>
-            <form id="vm" v-on="submit: submit" class="uk-panel uk-panel-box uk-form">
+            <form id="vm" v-on:submit.prevent="submit" class="uk-panel uk-panel-box uk-form">
                 <div class="uk-alert uk-alert-danger uk-hidden"></div>
                 <div class="uk-form-row">
                     <div class="uk-form-icon uk-width-1-1">
