--- a/www/templates/manage_users.html
+++ b/www/templates/manage_users.html
@@ -1,6 +1,6 @@
 {% extends '__base__.html' %}
 
-{% block title %}Comment{% endblock %}
+{% block title %}User{% endblock %}
 
 {% block beforehead %}
 
@@ -9,16 +9,13 @@ function initVM(data_) {
     var vm = new Vue({
         el: '#vm',
         data: {
-            comments: data_.comments,
+            users: data_.users,
             page: data_.page
         },
         methods: {
-            edit_comment: function (comment) {
-                location.assign('/manage/comments/edit?id=' + blog.id);
-            },
-            delete_comment: function (comment) {
-                if (confirm('Are you sure you want to permanently delete "' + comment.name + '"?')) {
-                    postJSON('/api/comments/' + comment.id + '/delete', function (err, r) {
+            delete_user: function (user) {
+                if (confirm('Are you sure you want to permanently delete "' + user.name + '"?')) {
+                    postJSON('/api/users/' + user.id + '/delete', function (err, r) {
                         if (err) {
                             return alert(err.message || err.error || err);
                         }
@@ -31,7 +28,7 @@ function initVM(data_) {
     $('#vm').show();
 }
 $(function() {
-    getJSON('/api/comments', {
+    getJSON('/api/users', {
         page: {{ page_index }}
     }, function (err, results) {
         if (err) {
@@ -50,9 +47,9 @@ $(function() {
     <div class="uk-width-1-1 uk-margin-bottom">
         <div class="uk-panel uk-panel-box">
             <ul class="uk-breadcrumb">
-                <li class="uk-active"><span>Comments</span></li>
+                <li><a href="/manage/comments">Comments</a></li>
                 <li><a href="/manage/blogs">Blogs</a></li>
-                <li><a href="/manage/users">Users</a></li>
+                <li class="uk-active"><span>Users</span></li>
             </ul>
         </div>
     </div>
@@ -67,26 +64,26 @@ $(function() {
         <table class="uk-table uk-table-hover">
             <thead>
                 <tr>
-                    <th class="uk-width-5-10">Title / Abstract</th>
-                    <th class="uk-width-2-10">Author</th>
+                    <th class="uk-width-5-10">Name</th>
+                    <th class="uk-width-2-10">Email</th>
                     <th class="uk-width-2-10">Created at</th>
                     <th class="uk-width-1-10">Operation</th>
                 </tr>
             </thead>
             <tbody>
-                <tr v-for="comment in comments" >
+                <tr v-for="user in users" >
                     <td>
-                        <a target="_blank" :href="'/blogs/'+comment.blog_id" v-text="comment.content"></a>
+                        <span v-text="user.name"></span>
+                        <sapn v-if="user.admin" style="color:#d05"><i class="uk-icon-key"></i> 管理员</sapn>
                     </td>
                     <td>
-                        <a target="_blank" :href="'/users/'+user.id" v-text="user.name"></a>
+                        <a :href="'mailto:'+user.email" v-text="user.email"></a>
                     </td>
                     <td>
-                        <span v-text="comment.created_at.toDateTime()"></span>
+                        <span v-text="user.created_at.toDateTime()"></span>
                     </td>
                     <td>
-                        <!-- <a href="#0" @click="edit_blog(blog)"><i class="uk-icon-edit"></i> -->
-                        <a href="#0" @click="delete_comment(comment)"><i class="uk-icon-trash-o"></i></a>
+                        <a href="#0" @click="delete_user(user)"><i class="uk-icon-trash-o"></i></a>
                     </td>
                 </tr>
             </tbody>
