--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -61,7 +61,7 @@
                     <a target="_blank" href="#" class="uk-icon-button uk-icon-linkedin-square"></a>
                     <a target="_blank" href="#" class="uk-icon-button uk-icon-twitter"></a>
                 </p>
-                <p>Powered by <a href="/">p3bird</a>. Copyright &copy; 2016. [<a href="/manage/" target="_blank">Manage</a>]</p>
+                <p>Powered by <a href="/">p3bird</a>. Copyright &copy; 2016. [<a href="/manage" target="_blank">Manage</a>]</p>
                 <p><a href="/" target="_blank">ustclin02.cern.ch</a>. All rights reserved.</p>
                 <a target="_blank" href="http://www.w3.org/TR/html5/"><i class="uk-icon-html5" style="font-size:64px; color: #444;"></i></a>
             </div>
