--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -12,10 +12,17 @@
     <script src="/static/js/sticky.min.js"></script>
     <script src="/static/js/vue.min.js"></script>
     <script src="/static/js/awesome.js"></script>
+    <style> div.footer {
+       position: relative;
+       bottom: 0;
+       width: 100%;
+    }
+    </style>
     {% block beforehead %}<!-- before head  -->{% endblock %}
 </head>
 <body>
-    <nav class="uk-navbar uk-navbar-attched uk-margin-bottom" >
+<div style="min-height: 100%;">
+    <nav class="uk-navbar uk-navbar-attched uk-margin-bottom" data-uk-sticky>
         <div class="uk-container uk-container-center">
             <a href="/" class="uk-navbar-brand">p3bird</a>
             <ul class="uk-navbar-nav">
@@ -30,6 +37,7 @@
                         <a href="#0"><i class="uk-icon-user"></i> {{ __user__.name }}</a>
                         <div class="uk-dropdown uk-dropdown-navbar">
                             <ul class="uk-nav uk-nav-navbar">
+				<li v-if='__user__.admin'><a href="/manage" target="_blank"> Manage</a> 
                                 <li><a href="/sign_out"><i class="uk-icon-sign-out"></i> sign out</a></li>
                             </ul>
                         </div>
@@ -43,7 +51,7 @@
         </div>
     </nav>
 
-    <div class="uk-container uk-container-center">
+    <div class="uk-container uk-container-center content">
         <div class="uk-grid">
             <!-- content -->
             {% block content %}
@@ -52,7 +60,7 @@
         </div>
     </div>
 
-    <div class="uk-margin-large-top" style="background-color:#eee; border-top:1px solid #ccc;">
+    <div class="uk-margin-large-top footer" style="background-color:#eee; border-top:1px solid #ccc;">
         <div class="uk-container uk-container-center uk-text-center">
             <div class="uk-panel uk-margin-top uk-margin-bottom">
                 <p>
@@ -61,11 +69,12 @@
                     <a target="_blank" href="#" class="uk-icon-button uk-icon-linkedin-square"></a>
                     <a target="_blank" href="#" class="uk-icon-button uk-icon-twitter"></a>
                 </p>
-                <p>Powered by <a href="/">p3bird</a>. Copyright &copy; 2016. [<a href="/manage" target="_blank">Manage</a>]</p>
-                <p><a href="/" target="_blank">ustclin02.cern.ch</a>. All rights reserved.</p>
-                <a target="_blank" href="http://www.w3.org/TR/html5/"><i class="uk-icon-html5" style="font-size:64px; color: #444;"></i></a>
+                <p>
+		    Copyright &copy; 2016. <a href="/" target="_blank">ustclin02.cern.ch</a>. All rights reserved.
+		</p>
             </div>
         </div>
     </div>
+</div>
 </body>
 </html>
