--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -12,17 +12,30 @@
     <script src="/static/js/sticky.min.js"></script>
     <script src="/static/js/vue.min.js"></script>
     <script src="/static/js/awesome.js"></script>
-    <style> div.footer {
-       position: relative;
-       bottom: 0;
-       width: 100%;
-    }
+
+    <script type="text/javascript">
+        $(function() {
+            var vp_height = $(window).height();
+            var bd_height = $('body').height();
+            if (bd_height < vp_height) {
+                $("#footer").css("position", "absolute");
+                $("#footer").css("width", "100%");
+                $("#footer").css("bottom", "0");
+            }
+        });
+    </script>
+
+    <style> 
+        body {
+            margin: 0;
+            padding: 0;
+        }
     </style>
+
     {% block beforehead %}<!-- before head  -->{% endblock %}
 </head>
 <body>
-<div style="min-height: 100%;">
-    <nav class="uk-navbar uk-navbar-attched uk-margin-bottom" data-uk-sticky>
+    <nav class="uk-navbar uk-navbar-attched uk-margin-bottom" >
         <div class="uk-container uk-container-center">
             <a href="/" class="uk-navbar-brand">p3bird</a>
             <ul class="uk-navbar-nav">
@@ -60,7 +73,7 @@
         </div>
     </div>
 
-    <div class="uk-margin-large-top footer" style="background-color:#eee; border-top:1px solid #ccc;">
+    <div id="footer" class="uk-margin-large-top" style="background-color:#eee; border-top:1px solid #ccc;">
         <div class="uk-container uk-container-center uk-text-center">
             <div class="uk-panel uk-margin-top uk-margin-bottom">
                 <p>
@@ -75,6 +88,5 @@
             </div>
         </div>
     </div>
-</div>
 </body>
 </html>
