--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -12,68 +12,97 @@
     <script src="/static/js/sticky.min.js"></script>
     <script src="/static/js/vue.min.js"></script>
     <script src="/static/js/awesome.js"></script>
+    <!--[if lt IE 9]>
+       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 
-    <script type="text/javascript">
-        $(function() {
-            var vp_height = $(window).height();
-            var bd_height = $('body').height();
-            if (bd_height < vp_height) {
-                $("#footer").css("position", "absolute");
-                $("#footer").css("width", "100%");
-                $("#footer").css("bottom", "0");
-            }
-        });
-    </script>
+    <style type="text/css">
+    /* base html layout, keep footer on the bottom */
 
-    <style> 
+        /* body is 100% of view port at least */
         body {
+            height: 100vh;
+            min-height: 100vh;
             margin: 0;
             padding: 0;
         }
+
+        /* wrapper keeps 100% of body; 
+           magrin-bottom is minus height of footer,
+           so footer could be embedded in the bottom of body
+        */
+        #wrapper {
+            min-height: 100%;
+            margin: 0 auto -90px;
+        }
+
+        /* main is the block to put body content.
+           padding-bottom is set to the height of footer to avoide overlap.
+        */
+        #main {
+            overflow:auto;
+            padding-bottom: 90px;
+        }
+
+
+        /* here comes the footer.
+           margin-top is set to the minus value of footer's height.
+        */
+        #footer {
+            position: relative;
+            height: 90px;
+            margin-top: -90px;
+            padding-bottom: 10px;
+            clear:both;
+        }    
+
     </style>
 
     {% block beforehead %}<!-- before head  -->{% endblock %}
 </head>
-<body>
-    <nav class="uk-navbar uk-navbar-attched uk-margin-bottom" >
-        <div class="uk-container uk-container-center">
-            <a href="/" class="uk-navbar-brand">p3bird</a>
-            <ul class="uk-navbar-nav">
-                <li data-url="blogs"><a href="/blogs"><i class="uk-icon-home"></i> Blog</a></li>
-                <li><a target="_blank" href="#"><i class="uk-icon-book"></i> Manual</a></li>
-                <li><a target="_blank" href="https://github.com/Yicheng-G/p3bird-web-app"><i class="uk-icon-code"></i> Source</a></li>
-            </ul>
-            <div class="uk-navbar-flip">
-                <ul class="uk-navbar-nav">
-                    {% if __user__ %}
-                    <li class="uk-parent" data-uk-dropdown>
-                        <a href="#0"><i class="uk-icon-user"></i> {{ __user__.name }}</a>
-                        <div class="uk-dropdown uk-dropdown-navbar">
-                            <ul class="uk-nav uk-nav-navbar">
-				<li v-if='__user__.admin'><a href="/manage" target="_blank"> Manage</a> 
-                                <li><a href="/sign_out"><i class="uk-icon-sign-out"></i> sign out</a></li>
-                            </ul>
-                        </div>
-                    </li>
-                    {% else %}
-		            <li><a href="/sign_in"><i class="uk-icon-sign-in"></i> sign in</a></li>
-		            <li><a href="/register"><i class="uk-icon-sign-in"></i> register</a></li>
-                    {% endif %}
-                </ul>
-            </div>
-        </div>
-    </nav>
 
-    <div class="uk-container uk-container-center content">
-        <div class="uk-grid">
-            <!-- content -->
-            {% block content %}
-            {% endblock %}
-            <!-- content -->
+<body>
+    <div id="wrapper">
+        <nav class="uk-navbar uk-navbar-attched uk-margin-bottom" >
+            <div class="uk-container uk-container-center">
+                <a href="/" class="uk-navbar-brand">p3bird</a>
+                <ul class="uk-navbar-nav">
+                    <li data-url="blogs"><a href="/blogs"><i class="uk-icon-home"></i> Blog</a></li>
+                    <li><a target="_blank" href="#"><i class="uk-icon-book"></i> Manual</a></li>
+                    <li><a target="_blank" href="https://github.com/Yicheng-G/p3bird-web-app"><i class="uk-icon-code"></i> Source</a></li>
+                </ul>
+                <div class="uk-navbar-flip">
+                    <ul class="uk-navbar-nav">
+                        {% if __user__ %}
+                        <li class="uk-parent" data-uk-dropdown>
+                            <a href="#0"><i class="uk-icon-user"></i> {{ __user__.name }}</a>
+                            <div class="uk-dropdown uk-dropdown-navbar">
+                                <ul class="uk-nav uk-nav-navbar">
+                                    <li v-if='__user__.admin'><a href="/manage" target="_blank"> Manage</a> 
+                                    <li><a href="/sign_out"><i class="uk-icon-sign-out"></i> sign out</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        {% else %}
+                            <li><a href="/sign_in"><i class="uk-icon-sign-in"></i> sign in</a></li>
+                            <li><a href="/register"><i class="uk-icon-sign-in"></i> register</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    
+        <div id="main" class="uk-container uk-container-center content">
+            <div class="uk-grid">
+                <!-- content -->
+                {% block content %}
+                {% endblock %}
+                <!-- content -->
+            </div>
         </div>
     </div>
 
-    <div id="footer" class="uk-margin-large-top" style="background-color:#eee; border-top:1px solid #ccc;">
+    <footer id="footer" class="uk-margin-large-top" style="background-color:#eee; border-top:1px solid #ccc;">
         <div class="uk-container uk-container-center uk-text-center">
             <div class="uk-panel uk-margin-top uk-margin-bottom">
                 <p>
@@ -83,10 +112,11 @@
                     <a target="_blank" href="#" class="uk-icon-button uk-icon-twitter"></a>
                 </p>
                 <p>
-		    Copyright &copy; 2016. <a href="/" target="_blank">ustclin02.cern.ch</a>. All rights reserved.
-		</p>
+                    Copyright &copy; 2016. <a href="/" target="_blank">ustclin02.cern.ch</a>. All rights reserved.
+               </p>
             </div>
         </div>
-    </div>
+    </footer>
+
 </body>
 </html>
