add manage icon

--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -78,7 +78,7 @@
                             <a href="#0"><i class="uk-icon-user"></i> {{ __user__.name }}</a>
                             <div class="uk-dropdown uk-dropdown-navbar">
                                 <ul class="uk-nav uk-nav-navbar">
-                                    <li v-if='__user__.admin'><a href="/manage" target="_blank"> Manage</a> 
+					<li v-if='__user__.admin'><a href="/manage" target="_blank"><i class="uk-icon-wrench"></i> Manage</a> 
                                     <li><a href="/sign_out"><i class="uk-icon-sign-out"></i> sign out</a></li>
                                 </ul>
                             </div>
