manage_blog: split icons

--- a/www/templates/manage_blogs.html
+++ b/www/templates/manage_blogs.html
@@ -43,6 +43,12 @@ $(function() {
 });
 </script>
 
+<style>
+.space-pre {
+    white-space: pre;
+}
+</style>
+
 {% endblock %}
 
 {% block content %}
@@ -72,24 +78,16 @@ $(function() {
                     <th class="uk-width-5-10">Title / Abstract</th>
                     <th class="uk-width-2-10">Author</th>
                     <th class="uk-width-2-10">Created at</th>
-                    <th class="uk-width-1-10">Operation</th>
+                    <th class="uk-width-1-10" colspan="2">Operation</th>
                 </tr>
             </thead>
             <tbody>
                 <tr v-for="blog in blogs" >
-                    <td>
-                        <a target="_blank" :href="'/blogs/'+blog.id" v-text="blog.name"></a>
-                    </td>
-                    <td>
-                        <a target="_blank" :href="'/users/'+blog.user_id" v-text="blog.user_name"></a>
-                    </td>
-                    <td>
-                        <span v-text="blog.created_at.toDateTime()"></span>
-                    </td>
-                    <td>
-                        <a href="#0" @click="edit_blog(blog)"><i class="uk-icon-edit"></i></a>
-                        <a href="#0" @click="delete_blog(blog)"><i class="uk-icon-trash-o"></i></a>
-                    </td>
+                    <td><a target="_blank" :href="'/blogs/'+blog.id" v-text="blog.name"></a></td>
+                    <td><a target="_blank" :href="'/users/'+blog.user_id" v-text="blog.user_name"></a></td>
+                    <td><span v-text="blog.created_at.toDateTime()"></span></td>
+                    <td><a href="#0" @click="edit_blog(blog)"><i class="uk-icon-edit"></i></a></td>
+                    <td><a href="#0" @click="delete_blog(blog)"><i class="uk-icon-trash-o"></i></a></td>
                 </tr>
             </tbody>
         </table>
