--- a/www/templates/test.html
+++ b/www/templates/test.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <title> Test users - p3bird web app</title>
-</head>
-<body>
-    <h1> All Users </h1>
-    {% for u in users %}
-    <p>{{u.name}} / {{u.email}}</p>
-    {% endfor %}
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>A Simple Page with CKEditor</title>
+        <!-- Make sure the path to CKEditor is correct. -->
+        <script src="/static/ckeditor/ckeditor.js"></script>
+    </head>
+    <body>
+        <form>
+            <textarea id="editor1" rows="10" cols="80">
+                This is my textarea to be replaced with CKEditor.
+            </textarea>
+            <script>
+                // Replace the <textarea id="editor1"> with a CKEditor
+                // instance, using default configuration.
+                CKEDITOR.replace( 'editor1' );
+            </script>
+        </form>
+    </body>
 </html>
