--- a/www/templates/test.html
+++ b/www/templates/test.html
@@ -1,57 +1,152 @@
-{% extends '__base__.html' %}
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title>  Test - p3bird web app</title>
+    <link rel="stylesheet" href="../static/css/uikit.min.css">
+    <link rel="stylesheet" href="../static/css/uikit.gradient.min.css">
+    <link rel="stylesheet" href="../static/css/p3bird.css">
+    <script src="../static/js/jquery-1.12.2.min.js"></script>
+    <script src="../static/js/sha1.min.js"></script>
+    <script src="../static/js/uikit.min.js"></script>
+    <script src="../static/js/sticky.min.js"></script>
+    <script src="../static/js/vue.min.js"></script>
+    <script src="../static/js/awesome.js"></script>
+    <script src="../static/js/p3bird.js"></script>
+    <script src="../static/js/marked.min.js"></script>
+    <!--[if lt IE 9]>
+       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 
-{% block title %} Test Page {% endblock %}
+    <style type="text/css">
+    /* base html layout, keep footer on the bottom */
 
-{% block beforehead %}
+        /* body is 100% of view port at least */
+        body {
+            height: 100vh;
+            min-height: 100vh;
+            margin: 0;
+            padding: 0;
+        }
 
-<script>
+        /* wrapper keeps 100% of body;
+           magrin-bottom is minus height of footer,
+           so footer could be embedded in the bottom of body
+        */
+        #wrapper {
+            min-height: 100%;
+            margin: 0 auto -90px;
+        }
 
-new Vue({
-  el: '#editor',
-  data: {
-    input: '# hello'
-  },
-  filters: {
-    marked: marked
-  }
-})
+        /* main is the block to put body content.
+           padding-bottom is set to the height of footer to avoide overlap.
+        */
+        #main {
+            overflow:auto;
+            padding-bottom: 90px;
+        }
 
-</script>
 
-<style>
+        /* here comes the footer.
+           margin-top is set to the minus value of footer's height.
+        */
+        #footer {
+            position: relative;
+            height: 90px;
+            margin-top: -90px;
+            padding-bottom: 10px;
+            clear:both;
+        }
+    </style>
 
-    textarea, #editor div {
-      display: inline-block;
-      width: 49%;
-      height: 100%;
-      vertical-align: top;
-      -webkit-box-sizing: border-box;
-      -moz-box-sizing: border-box;
-      box-sizing: border-box;
-      padding: 0 20px;
-    }
-    
-    textarea {
-      border: none;
-      border-right: 1px solid #ccc;
-      resize: none;
-      outline: none;
-      background-color: #f6f6f6;
-      font-size: 14px;
-      font-family: 'Monaco', courier, monospace;
-      padding: 20px;
-    }
-    
-    code {
-      color: #f66;
-    }
-</style>
+    <script>
 
-{% endblock %}
+        function Foo () {
+            var vm = new Vue({
+                el: '.pb-editor',
+                data: {
+                    input: '# hello'
+                },
+                filters: {
+                    marked: marked
+                }
+            });
+            $('#vm').show()
+        };
 
-{% block content %}
-<div id="editor">
-  <textarea v-model="input" debounce="300"></textarea>
-  <div v-html="input | marked"></div>
-</div>
-{% endblock %}
+
+        $(function () {
+              Foo();
+              var div_height = $(".pb-editor").innerHeight();
+              $('.pb-editor div').height(div_height);
+              $('.pb-editor textarea').height(div_height);
+        });
+
+    </script>
+</head>
+
+<body>
+    <div id="wrapper">
+        <nav class="uk-navbar uk-navbar-attched uk-margin-bottom" >
+            <div class="uk-container uk-container-center">
+                <a href="/" class="uk-navbar-brand">p3bird</a>
+                <ul class="uk-navbar-nav">
+                    <li data-url="blogs"><a href="/blogs"><i class="uk-icon-home"></i> Blog</a></li>
+                    <li><a target="_blank" href="#"><i class="uk-icon-book"></i> Manual</a></li>
+                    <li><a target="_blank" href="https://github.com/Yicheng-G/p3bird-web-app"><i class="uk-icon-code"></i> Source</a></li>
+                </ul>
+                <div class="uk-navbar-flip">
+                    <ul class="uk-navbar-nav">
+                        {% if __user__ %}
+                        <li class="uk-parent" data-uk-dropdown>
+                            <a href="#0"><i class="uk-icon-user"></i> {{ __user__.name }}</a>
+                            <div class="uk-dropdown uk-dropdown-navbar">
+                                <ul class="uk-nav uk-nav-navbar">
+                                    <li v-if='__user__.admin'><a href="/manage"><i class="uk-icon-gear"></i> Manage</a>
+                                    <li v-if='__user__.admin'><a href="/test_page"><i class="uk-icon-wrench"></i> Test</a>
+                                    <li><a href="/sign_out"><i class="uk-icon-sign-out"></i> sign out</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        {% else %}
+                            <li><a href="/sign_in"><i class="uk-icon-sign-in"></i> sign in</a></li>
+                            <li><a href="/register"><i class="uk-icon-sign-in"></i> register</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div id="main" class="uk-container uk-container-center content">
+            <div class="uk-grid">
+                <!-- content -->
+                <form>
+                    <div class="pb-editor">
+                        <textarea v-model="input" debounce="300", rows="16"></textarea>
+                        <div v-html="input | marked"></div>
+                    </div>
+                </form>
+                <!-- content -->
+            </div>
+        </div>
+    </div>
+
+    <footer id="footer" class="uk-margin-large-top" style="background-color:#eee; border-top:1px solid #ccc;">
+        <div class="uk-container uk-container-center uk-text-center">
+            <div class="uk-panel uk-margin-top uk-margin-bottom">
+                <p>
+                    <a target="_blank" href="#" class="uk-icon-button uk-icon-weibo"></a>
+                    <a target="_blank" href="#" class="uk-icon-button uk-icon-github"></a>
+                    <a target="_blank" href="#" class="uk-icon-button uk-icon-linkedin-square"></a>
+                    <a target="_blank" href="#" class="uk-icon-button uk-icon-twitter"></a>
+                </p>
+                <p>
+                    Copyright &copy; 2016. <a href="/" target="_blank">ustclin02.cern.ch</a>. All rights reserved.
+               </p>
+            </div>
+        </div>
+    </footer>
+
+</body>
+</html>
+
