--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -6,12 +6,14 @@
     <title>  {% block title %} ? {% endblock %} - p3bird web app</title>
     <link rel="stylesheet" href="/static/css/uikit.min.css">
     <link rel="stylesheet" href="/static/css/uikit.gradient.min.css">
+    <link rel="stylesheet" href="/static/css/p3bird.css">
     <script src="/static/js/jquery-1.12.2.min.js"></script>
     <script src="/static/js/sha1.min.js"></script>
     <script src="/static/js/uikit.min.js"></script>
     <script src="/static/js/sticky.min.js"></script>
     <script src="/static/js/vue.min.js"></script>
     <script src="/static/js/awesome.js"></script>
+    <script src="/static/js/marked.min.js"></script>
     <!--[if lt IE 9]>
        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
