--- a/www/templates/test.html
+++ b/www/templates/test.html
@@ -60,23 +60,37 @@
     </style>
 
     <script>
-
-        function Foo () {
+        function initVM (blog) {
             var vm = new Vue({
-                el: '.pb-editor',
-                data: {
-                    input: '# hello'
-                },
+                el: '#vm',
+                data: blog,
                 filters: {
                     marked: marked
+                },
+                methods: {
+                    submit: function (event) {
+                        var $form = $('#vm').find('form');
+                        $form.postJSON(action, this.$data, function (err, r) {
+                            if (err) {
+                                $form.showFormError(err);
+                            }
+                            else {
+                                return location.assign('/manage/blogs');
+                            }
+                        });
+                    }
                 }
             });
             $('#vm').show()
         };
-
-
+        
+        
         $(function () {
-              Foo();
+              initVM({
+                  name: 'Title',
+                  summary: 'Abstract',
+                  content: '# Content'
+              });
               var div_height = $(".pb-editor").innerHeight();
               $('.pb-editor div').height(div_height);
               $('.pb-editor textarea').height(div_height);
@@ -120,12 +134,33 @@
         <div id="main" class="uk-container uk-container-center content">
             <div class="uk-grid">
                 <!-- content -->
-                <form>
-                    <div class="pb-editor">
-                        <textarea v-model="input" debounce="300", rows="16"></textarea>
-                        <div v-html="input | marked"></div>
-                    </div>
-                </form>
+    <div id="vm" class="uk-width-3-3">
+        <form v-on:submit.prevent="submit" class="uk-form uk-form-stacked">
+            <div class="uk-alert uk-alert-danger uk-hidden"></div>
+            <div class="uk-form-row">
+                <label class="uk-form-label">Content:</label>
+                <div class="uk-form-controls pb-editor">
+                    <textarea v-model="content" rows="24" name="content"
+                              placeholder="content" class="uk-width-1-1" style="resize:none;"></textarea>
+		            <div v-html="content | marked"></div>
+                </div>
+            </div>
+            <div class="uk-form-row">
+                <button type="submit" class="uk-button uk-button-primary"><i class="uk-icon-save"></i> Save</button>
+                <a href="/manage/blogs" class="uk-button"><i class="uk-icon-times"></i> Cancel</a>
+            </div>
+        </form>
+    </div>
+
+<!--
+    <div class="uk-width-3-3">
+                <div class="pb-editor">
+                    <textarea v-model="content" rows="24" name="content"
+                              placeholder="content" class="uk-width-1-1" style="resize:none;"></textarea>
+		            <div v-html="content | marked"></div>
+                </div>
+    </div>
+-->
                 <!-- content -->
             </div>
         </div>
