--- a/www/templates/manage_blog_edit.html
+++ b/www/templates/manage_blog_edit.html
@@ -49,7 +49,8 @@
             initVM({
                 name: '',
                 summary: '',
-                content: ''
+                content: '',
+		html_content: ''
             });
         }
         var div_height = $(".pb-editor").innerHeight();
