--- a/www/templates/manage_blog_edit.html
+++ b/www/templates/manage_blog_edit.html
@@ -2,7 +2,7 @@
 
 {% block title %} Edit Blog {% endblock %}
 
-{% block beforehead %}
+{% block scripts %}
 
 <script>
 
@@ -63,6 +63,7 @@
 {% endblock %}
 
 {% block content %}
+
     <div class="uk-width-1-1 uk-margin-bottom">
         <div class="uk-panel uk-panel-box">
             <ul class="uk-breadcrumb">
