--- a/www/templates/manage_blogs.html
+++ b/www/templates/manage_blogs.html
@@ -2,7 +2,7 @@
 
 {% block title %}Blog{% endblock %}
 
-{% block beforehead %}
+{% block scripts %}
 
 <script>
 function initVM(data_) {
@@ -42,12 +42,6 @@ $(function() {
     });
 });
 </script>
-
-<style>
-.space-pre {
-    white-space: pre;
-}
-</style>
 
 {% endblock %}
 
